// Vitest Snapshot v1

exports[`Checkbox > Checkbox baseVue demo works fine 1`] = `
<div
  data-v-11729813=""
>
  <div
    class="t-checkbox-group checkbox-group-demo"
    data-v-11729813=""
  >
    
    <div
      class="t-checkbox"
      data-v-11729813=""
    >
      <div
        class="t-checkbox__content-wrap"
      >
        <span
          class="t-checkbox__icon-left"
        >
          <input
            class="t-checkbox__original-left"
            name="checkbox1"
            type="checkbox"
            value="1"
          />
          <svg
            class="t-icon t-icon-circle"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
              fill="currentColor"
              fill-opacity="0.9"
              opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-checkbox__label"
        >
          <span
            style="display: -webkit-box; overflow: hidden;"
          >
            多选
          </span>
          <!--v-if-->
        </span>
        <!--v-if-->
      </div>
      <!--下边框 -->
      <div
        class="t-checkbox__border t-checkbox__border--left"
      />
    </div>
    <div
      class="t-checkbox t-is-checked"
      data-v-11729813=""
    >
      <div
        class="t-checkbox__content-wrap"
      >
        <span
          class="t-checkbox__icon-left"
        >
          <input
            class="t-checkbox__original-left"
            name="checkbox1"
            type="checkbox"
            value="2"
          />
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-checkbox__label"
        >
          <span
            style="display: -webkit-box; overflow: hidden;"
          >
            多选
          </span>
          <!--v-if-->
        </span>
        <!--v-if-->
      </div>
      <!--下边框 -->
      <div
        class="t-checkbox__border t-checkbox__border--left"
      />
    </div>
    <div
      class="t-checkbox t-is-checked"
      data-v-11729813=""
    >
      <div
        class="t-checkbox__content-wrap"
      >
        <span
          class="t-checkbox__icon-left"
        >
          <input
            class="t-checkbox__original-left"
            name="checkbox1"
            type="checkbox"
            value="3"
          />
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-checkbox__label"
        >
          <span
            style="display: -webkit-box; overflow: hidden;"
          >
            多选
          </span>
          <!--v-if-->
        </span>
        <!--v-if-->
      </div>
      <!--下边框 -->
      <div
        class="t-checkbox__border t-checkbox__border--left"
      />
    </div>
    <div
      class="t-checkbox"
      data-v-11729813=""
    >
      <div
        class="t-checkbox__content-wrap"
      >
        <span
          class="t-checkbox__icon-left"
        >
          <input
            class="t-checkbox__original-left"
            name="checkbox1"
            type="checkbox"
            value="4"
          />
          <svg
            class="t-icon t-icon-circle"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
              fill="currentColor"
              fill-opacity="0.9"
              opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-checkbox__label"
        >
          <span
            style="display: -webkit-box; overflow: hidden;"
          >
            多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多
          </span>
          <!--v-if-->
        </span>
        <!--v-if-->
      </div>
      <!--下边框 -->
      <div
        class="t-checkbox__border t-checkbox__border--left"
      />
    </div>
    <div
      class="t-checkbox"
      data-v-11729813=""
    >
      <div
        class="t-checkbox__content-wrap"
      >
        <span
          class="t-checkbox__icon-left"
        >
          <input
            class="t-checkbox__original-left"
            name="checkbox1"
            type="checkbox"
            value="5"
          />
          <svg
            class="t-icon t-icon-circle"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
              fill="currentColor"
              fill-opacity="0.9"
              opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-checkbox__label"
        >
          <span
            style="display: -webkit-box; overflow: hidden;"
          >
            多选
          </span>
          <span
            class="t-checkbox__description"
            style="display: -webkit-box; overflow: hidden;"
          >
            多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多
          </span>
        </span>
        <!--v-if-->
      </div>
      <!--下边框 -->
      <div
        class="t-checkbox__border t-checkbox__border--left"
      />
    </div>
    
  </div>
</div>
`;

exports[`Checkbox > Checkbox disableVue demo works fine 1`] = `
<div
  class="checkbox-demo"
  data-v-3fba2a16=""
>
  <div
    class="t-checkbox t-is-disabled"
    data-v-3fba2a16=""
  >
    <div
      class="t-checkbox__content-wrap"
    >
      <span
        class="t-checkbox__icon-left"
      >
        <input
          class="t-checkbox__original-left"
          disabled=""
          name=""
          type="checkbox"
        />
        <svg
          class="t-icon t-icon-circle"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
            fill="currentColor"
            fill-opacity="0.9"
            opacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-checkbox__label"
      >
        <span
          style="color: rgb(220, 220, 220); display: -webkit-box; overflow: hidden;"
        >
          多选
        </span>
        <!--v-if-->
      </span>
      <!--v-if-->
    </div>
    <!--下边框 -->
    <div
      class="t-checkbox__border t-checkbox__border--left"
    />
  </div>
  <div
    class="t-checkbox t-is-checked t-is-disabled"
    data-v-3fba2a16=""
  >
    <div
      class="t-checkbox__content-wrap"
    >
      <span
        class="t-checkbox__icon-left"
      >
        <input
          class="t-checkbox__original-left"
          disabled=""
          name=""
          type="checkbox"
        />
        <svg
          class="t-icon t-icon-check-circle-filled"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-checkbox__label"
      >
        <span
          style="color: rgb(220, 220, 220); display: -webkit-box; overflow: hidden;"
        >
          多选
        </span>
        <!--v-if-->
      </span>
      <!--v-if-->
    </div>
    <!--下边框 -->
    <div
      class="t-checkbox__border t-checkbox__border--left"
    />
  </div>
  <div
    class="t-checkbox t-is-disabled"
    data-v-3fba2a16=""
  >
    <div
      class="t-checkbox__content-wrap"
    >
      <!--v-if-->
      <span
        class="t-checkbox__label t-checkbox__label-left"
      >
        <span
          style="color: rgb(220, 220, 220); display: -webkit-box; overflow: hidden;"
        >
          多选
        </span>
        <!--v-if-->
      </span>
      <span
        class="t-checkbox__icon-right"
      >
        <input
          class="t-checkbox__original-right"
          disabled=""
          name=""
          type="checkbox"
        />
        <svg
          class="t-icon t-icon-circle"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
            fill="currentColor"
            fill-opacity="0.9"
            opacity="0.9"
          />
        </svg>
      </span>
    </div>
    <!--下边框 -->
    <div
      class="t-checkbox__border t-checkbox__border--right"
    />
  </div>
  <div
    class="t-checkbox t-is-checked t-is-disabled"
    data-v-3fba2a16=""
  >
    <div
      class="t-checkbox__content-wrap"
    >
      <!--v-if-->
      <span
        class="t-checkbox__label t-checkbox__label-left"
      >
        <span
          style="color: rgb(220, 220, 220); display: -webkit-box; overflow: hidden;"
        >
          多选
        </span>
        <!--v-if-->
      </span>
      <span
        class="t-checkbox__icon-right"
      >
        <input
          class="t-checkbox__original-right"
          disabled=""
          name=""
          type="checkbox"
        />
        <svg
          class="t-icon t-icon-check-circle-filled"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    <!--下边框 -->
    <div
      class="t-checkbox__border t-checkbox__border--right"
    />
  </div>
</div>
`;

exports[`Checkbox > Checkbox groupVue demo works fine 1`] = `
<div
  data-v-336087ad=""
>
  <div
    class="t-checkbox-group checkbox-group-demo"
    data-v-336087ad=""
  >
    <span>
      
      <div
        class="t-checkbox t-is-indeterminate"
      >
        <div
          class="t-checkbox__content-wrap"
        >
          <span
            class="t-checkbox__icon-left"
          >
            <input
              class="t-checkbox__original-left"
              name=""
              type="checkbox"
            />
            <svg
              class="t-icon t-icon-minus-circle-filled"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                clip-rule="evenodd"
                d="M8 15A7 7 0 108 1a7 7 0 000 14zm3.5-6.5h-7v-1h7v1z"
                fill="currentColor"
                fill-opacity="0.9"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="t-checkbox__label"
          >
            <span
              style="display: -webkit-box; overflow: hidden;"
            >
              全选
            </span>
            <!--v-if-->
          </span>
          <!--v-if-->
        </div>
        <!--下边框 -->
        <div
          class="t-checkbox__border t-checkbox__border--left"
        />
      </div>
      <div
        class="t-checkbox t-is-checked"
      >
        <div
          class="t-checkbox__content-wrap"
        >
          <span
            class="t-checkbox__icon-left"
          >
            <input
              class="t-checkbox__original-left"
              name=""
              type="checkbox"
              value="1"
            />
            <svg
              class="t-icon t-icon-check-circle-filled"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-checkbox__label"
          >
            <span
              style="display: -webkit-box; overflow: hidden;"
            >
              多选
            </span>
            <!--v-if-->
          </span>
          <!--v-if-->
        </div>
        <!--下边框 -->
        <div
          class="t-checkbox__border t-checkbox__border--left"
        />
      </div>
      <div
        class="t-checkbox"
      >
        <div
          class="t-checkbox__content-wrap"
        >
          <span
            class="t-checkbox__icon-left"
          >
            <input
              class="t-checkbox__original-left"
              name=""
              type="checkbox"
              value="2"
            />
            <svg
              class="t-icon t-icon-circle"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
                fill="currentColor"
                fill-opacity="0.9"
                opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-checkbox__label"
          >
            <span
              style="display: -webkit-box; overflow: hidden;"
            >
              多选
            </span>
            <!--v-if-->
          </span>
          <!--v-if-->
        </div>
        <!--下边框 -->
        <div
          class="t-checkbox__border t-checkbox__border--left"
        />
      </div>
      <div
        class="t-checkbox"
      >
        <div
          class="t-checkbox__content-wrap"
        >
          <span
            class="t-checkbox__icon-left"
          >
            <input
              class="t-checkbox__original-left"
              name=""
              type="checkbox"
              value="3"
            />
            <svg
              class="t-icon t-icon-circle"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
                fill="currentColor"
                fill-opacity="0.9"
                opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-checkbox__label"
          >
            <span
              style="display: -webkit-box; overflow: hidden;"
            >
              多选
            </span>
            <!--v-if-->
          </span>
          <!--v-if-->
        </div>
        <!--下边框 -->
        <div
          class="t-checkbox__border t-checkbox__border--left"
        />
      </div>
      
    </span>
  </div>
</div>
`;

exports[`Checkbox > Checkbox iconVue demo works fine 1`] = `
<div
  data-v-4c12b9bb=""
>
  <div
    class="t-checkbox-group checkbox-group-demo"
    data-v-4c12b9bb=""
  >
    
    <div
      class="t-checkbox"
      data-v-4c12b9bb=""
    >
      <div
        class="t-checkbox__content-wrap"
      >
        <span
          class="t-checkbox__icon-left"
        >
          <input
            class="t-checkbox__original-left"
            name="checkbox6"
            type="checkbox"
            value="1"
          />
          <svg
            class="t-icon t-icon-rectangle"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              clip-rule="evenodd"
              d="M3 14a1 1 0 01-1-1V3a1 1 0 011-1h10a1 1 0 011 1v10a1 1 0 01-1 1H3zm0-1V3h10v10H3z"
              fill="currentColor"
              fill-opacity="0.9"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="t-checkbox__label"
        >
          <span
            style="display: -webkit-box; overflow: hidden;"
          >
            多选
          </span>
          <!--v-if-->
        </span>
        <!--v-if-->
      </div>
      <!--下边框 -->
      <div
        class="t-checkbox__border t-checkbox__border--left"
      />
    </div>
    <div
      class="t-checkbox t-is-checked"
      data-v-4c12b9bb=""
    >
      <div
        class="t-checkbox__content-wrap"
      >
        <span
          class="t-checkbox__icon-left"
        >
          <input
            class="t-checkbox__original-left"
            name="checkbox6"
            type="checkbox"
            value="2"
          />
          <svg
            class="t-icon t-icon-check-rectangle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M2 13a1 1 0 001 1h10a1 1 0 001-1V3a1 1 0 00-1-1H3a1 1 0 00-1 1v10zm5-3.64l3.77-3.78.71.7L7 10.79l-2.49-2.5.71-.7L7 9.36z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-checkbox__label"
        >
          <span
            style="display: -webkit-box; overflow: hidden;"
          >
            多选
          </span>
          <!--v-if-->
        </span>
        <!--v-if-->
      </div>
      <!--下边框 -->
      <div
        class="t-checkbox__border t-checkbox__border--left"
      />
    </div>
    <div
      class="t-checkbox t-is-checked"
      data-v-4c12b9bb=""
    >
      <div
        class="t-checkbox__content-wrap"
      >
        <span
          class="t-checkbox__icon-left"
        >
          <input
            class="t-checkbox__original-left"
            name="checkbox6"
            type="checkbox"
            value="3"
          />
          <svg
            class="t-icon t-icon-check-rectangle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M2 13a1 1 0 001 1h10a1 1 0 001-1V3a1 1 0 00-1-1H3a1 1 0 00-1 1v10zm5-3.64l3.77-3.78.71.7L7 10.79l-2.49-2.5.71-.7L7 9.36z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-checkbox__label"
        >
          <span
            style="display: -webkit-box; overflow: hidden;"
          >
            多选
          </span>
          <!--v-if-->
        </span>
        <!--v-if-->
      </div>
      <!--下边框 -->
      <div
        class="t-checkbox__border t-checkbox__border--left"
      />
    </div>
    
  </div>
</div>
`;

exports[`Checkbox > Checkbox indeterminateVue demo works fine 1`] = `
<div
  class="checkbox-demo"
  data-v-72ea89e9=""
>
  <div
    class="t-checkbox t-is-indeterminate"
    data-v-72ea89e9=""
  >
    <div
      class="t-checkbox__content-wrap"
    >
      <span
        class="t-checkbox__icon-left"
      >
        <input
          class="t-checkbox__original-left"
          name=""
          type="checkbox"
        />
        <svg
          class="t-icon t-icon-minus-circle-filled"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            clip-rule="evenodd"
            d="M8 15A7 7 0 108 1a7 7 0 000 14zm3.5-6.5h-7v-1h7v1z"
            fill="currentColor"
            fill-opacity="0.9"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="t-checkbox__label"
      >
        <span
          style="display: -webkit-box; overflow: hidden;"
        >
          多选
        </span>
        <!--v-if-->
      </span>
      <!--v-if-->
    </div>
    <!--下边框 -->
    <div
      class="t-checkbox__border t-checkbox__border--left"
    />
  </div>
</div>
`;

exports[`Checkbox > Checkbox maxVue demo works fine 1`] = `
<div
  data-v-cd906cdc=""
>
  <div
    class="t-checkbox-group checkbox-group-demo"
    data-v-cd906cdc=""
  >
    
    <div
      class="t-checkbox t-is-checked"
      data-v-cd906cdc=""
    >
      <div
        class="t-checkbox__content-wrap"
      >
        <span
          class="t-checkbox__icon-left"
        >
          <input
            class="t-checkbox__original-left"
            name="checkbox1"
            type="checkbox"
            value="1"
          />
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-checkbox__label"
        >
          <span
            style="display: -webkit-box; overflow: hidden;"
          >
            多选
          </span>
          <!--v-if-->
        </span>
        <!--v-if-->
      </div>
      <!--下边框 -->
      <div
        class="t-checkbox__border t-checkbox__border--left"
      />
    </div>
    <div
      class="t-checkbox t-is-checked"
      data-v-cd906cdc=""
    >
      <div
        class="t-checkbox__content-wrap"
      >
        <span
          class="t-checkbox__icon-left"
        >
          <input
            class="t-checkbox__original-left"
            name="checkbox1"
            type="checkbox"
            value="2"
          />
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-checkbox__label"
        >
          <span
            style="display: -webkit-box; overflow: hidden;"
          >
            多选
          </span>
          <!--v-if-->
        </span>
        <!--v-if-->
      </div>
      <!--下边框 -->
      <div
        class="t-checkbox__border t-checkbox__border--left"
      />
    </div>
    <div
      class="t-checkbox t-is-disabled"
      data-v-cd906cdc=""
    >
      <div
        class="t-checkbox__content-wrap"
      >
        <span
          class="t-checkbox__icon-left"
        >
          <input
            class="t-checkbox__original-left"
            disabled=""
            name="checkbox1"
            type="checkbox"
            value="3"
          />
          <svg
            class="t-icon t-icon-circle"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
              fill="currentColor"
              fill-opacity="0.9"
              opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-checkbox__label"
        >
          <span
            style="color: rgb(220, 220, 220); display: -webkit-box; overflow: hidden;"
          >
            多选
          </span>
          <!--v-if-->
        </span>
        <!--v-if-->
      </div>
      <!--下边框 -->
      <div
        class="t-checkbox__border t-checkbox__border--left"
      />
    </div>
    
  </div>
</div>
`;

exports[`Checkbox > Checkbox mobileVue demo works fine 1`] = `
<div>
  <div
    class="tdesign-mobile-demo"
  >
    <h1
      class="title"
    >
      Checkbox 多选框
    </h1>
    <p
      class="summary"
    >
      描述文字
    </p>
    <div
      class="tdesign-mobile-demo-block"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础多选框
      </p>
      
      <div
        data-v-11729813=""
      >
        <div
          class="t-checkbox-group checkbox-group-demo"
          data-v-11729813=""
        >
          
          <div
            class="t-checkbox"
            data-v-11729813=""
          >
            <div
              class="t-checkbox__content-wrap"
            >
              <span
                class="t-checkbox__icon-left"
              >
                <input
                  class="t-checkbox__original-left"
                  name="checkbox1"
                  type="checkbox"
                  value="1"
                />
                <svg
                  class="t-icon t-icon-circle"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                    opacity="0.9"
                  />
                </svg>
              </span>
              <span
                class="t-checkbox__label"
              >
                <span
                  style="display: -webkit-box; overflow: hidden;"
                >
                  多选
                </span>
                <!--v-if-->
              </span>
              <!--v-if-->
            </div>
            <!--下边框 -->
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          <div
            class="t-checkbox t-is-checked"
            data-v-11729813=""
          >
            <div
              class="t-checkbox__content-wrap"
            >
              <span
                class="t-checkbox__icon-left"
              >
                <input
                  class="t-checkbox__original-left"
                  name="checkbox1"
                  type="checkbox"
                  value="2"
                />
                <svg
                  class="t-icon t-icon-check-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
              <span
                class="t-checkbox__label"
              >
                <span
                  style="display: -webkit-box; overflow: hidden;"
                >
                  多选
                </span>
                <!--v-if-->
              </span>
              <!--v-if-->
            </div>
            <!--下边框 -->
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          <div
            class="t-checkbox t-is-checked"
            data-v-11729813=""
          >
            <div
              class="t-checkbox__content-wrap"
            >
              <span
                class="t-checkbox__icon-left"
              >
                <input
                  class="t-checkbox__original-left"
                  name="checkbox1"
                  type="checkbox"
                  value="3"
                />
                <svg
                  class="t-icon t-icon-check-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
              <span
                class="t-checkbox__label"
              >
                <span
                  style="display: -webkit-box; overflow: hidden;"
                >
                  多选
                </span>
                <!--v-if-->
              </span>
              <!--v-if-->
            </div>
            <!--下边框 -->
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          <div
            class="t-checkbox"
            data-v-11729813=""
          >
            <div
              class="t-checkbox__content-wrap"
            >
              <span
                class="t-checkbox__icon-left"
              >
                <input
                  class="t-checkbox__original-left"
                  name="checkbox1"
                  type="checkbox"
                  value="4"
                />
                <svg
                  class="t-icon t-icon-circle"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                    opacity="0.9"
                  />
                </svg>
              </span>
              <span
                class="t-checkbox__label"
              >
                <span
                  style="display: -webkit-box; overflow: hidden;"
                >
                  多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多
                </span>
                <!--v-if-->
              </span>
              <!--v-if-->
            </div>
            <!--下边框 -->
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          <div
            class="t-checkbox"
            data-v-11729813=""
          >
            <div
              class="t-checkbox__content-wrap"
            >
              <span
                class="t-checkbox__icon-left"
              >
                <input
                  class="t-checkbox__original-left"
                  name="checkbox1"
                  type="checkbox"
                  value="5"
                />
                <svg
                  class="t-icon t-icon-circle"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                    opacity="0.9"
                  />
                </svg>
              </span>
              <span
                class="t-checkbox__label"
              >
                <span
                  style="display: -webkit-box; overflow: hidden;"
                >
                  多选
                </span>
                <span
                  class="t-checkbox__description"
                  style="display: -webkit-box; overflow: hidden;"
                >
                  多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多
                </span>
              </span>
              <!--v-if-->
            </div>
            <!--下边框 -->
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          
        </div>
      </div>
      
    </div>
    <div
      class="tdesign-mobile-demo-block"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        右侧圆形多选框
      </p>
      
      <div
        data-v-2e3e3cca=""
      >
        <div
          class="t-checkbox-group checkbox-group-demo"
          data-v-2e3e3cca=""
        >
          
          <div
            class="t-checkbox"
            data-v-2e3e3cca=""
          >
            <div
              class="t-checkbox__content-wrap"
            >
              <!--v-if-->
              <span
                class="t-checkbox__label t-checkbox__label-left"
              >
                <span
                  style="display: -webkit-box; overflow: hidden;"
                >
                  多选
                </span>
                <!--v-if-->
              </span>
              <span
                class="t-checkbox__icon-right"
              >
                <input
                  class="t-checkbox__original-right"
                  name="checkbox2"
                  type="checkbox"
                  value="1"
                />
                <svg
                  class="t-icon t-icon-circle"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                    opacity="0.9"
                  />
                </svg>
              </span>
            </div>
            <!--下边框 -->
            <div
              class="t-checkbox__border t-checkbox__border--right"
            />
          </div>
          <div
            class="t-checkbox t-is-checked"
            data-v-2e3e3cca=""
          >
            <div
              class="t-checkbox__content-wrap"
            >
              <!--v-if-->
              <span
                class="t-checkbox__label t-checkbox__label-left"
              >
                <span
                  style="display: -webkit-box; overflow: hidden;"
                >
                  多选
                </span>
                <!--v-if-->
              </span>
              <span
                class="t-checkbox__icon-right"
              >
                <input
                  class="t-checkbox__original-right"
                  name="checkbox2"
                  type="checkbox"
                  value="2"
                />
                <svg
                  class="t-icon t-icon-check-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
            </div>
            <!--下边框 -->
            <div
              class="t-checkbox__border t-checkbox__border--right"
            />
          </div>
          <div
            class="t-checkbox t-is-checked"
            data-v-2e3e3cca=""
          >
            <div
              class="t-checkbox__content-wrap"
            >
              <!--v-if-->
              <span
                class="t-checkbox__label t-checkbox__label-left"
              >
                <span
                  style="display: -webkit-box; overflow: hidden;"
                >
                  多选
                </span>
                <!--v-if-->
              </span>
              <span
                class="t-checkbox__icon-right"
              >
                <input
                  class="t-checkbox__original-right"
                  name="checkbox2"
                  type="checkbox"
                  value="3"
                />
                <svg
                  class="t-icon t-icon-check-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
            </div>
            <!--下边框 -->
            <div
              class="t-checkbox__border t-checkbox__border--right"
            />
          </div>
          <div
            class="t-checkbox"
            data-v-2e3e3cca=""
          >
            <div
              class="t-checkbox__content-wrap"
            >
              <!--v-if-->
              <span
                class="t-checkbox__label t-checkbox__label-left"
              >
                <span
                  style="display: -webkit-box; overflow: hidden;"
                >
                  多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多
                </span>
                <!--v-if-->
              </span>
              <span
                class="t-checkbox__icon-right"
              >
                <input
                  class="t-checkbox__original-right"
                  name="checkbox2"
                  type="checkbox"
                  value="4"
                />
                <svg
                  class="t-icon t-icon-circle"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                    opacity="0.9"
                  />
                </svg>
              </span>
            </div>
            <!--下边框 -->
            <div
              class="t-checkbox__border t-checkbox__border--right"
            />
          </div>
          
        </div>
      </div>
      
    </div>
    <div
      class="tdesign-mobile-demo-block"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        带全选多选框
      </p>
      
      <div
        data-v-336087ad=""
      >
        <div
          class="t-checkbox-group checkbox-group-demo"
          data-v-336087ad=""
        >
          <span>
            
            <div
              class="t-checkbox t-is-indeterminate"
            >
              <div
                class="t-checkbox__content-wrap"
              >
                <span
                  class="t-checkbox__icon-left"
                >
                  <input
                    class="t-checkbox__original-left"
                    name=""
                    type="checkbox"
                  />
                  <svg
                    class="t-icon t-icon-minus-circle-filled"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M8 15A7 7 0 108 1a7 7 0 000 14zm3.5-6.5h-7v-1h7v1z"
                      fill="currentColor"
                      fill-opacity="0.9"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="t-checkbox__label"
                >
                  <span
                    style="display: -webkit-box; overflow: hidden;"
                  >
                    全选
                  </span>
                  <!--v-if-->
                </span>
                <!--v-if-->
              </div>
              <!--下边框 -->
              <div
                class="t-checkbox__border t-checkbox__border--left"
              />
            </div>
            <div
              class="t-checkbox t-is-checked"
            >
              <div
                class="t-checkbox__content-wrap"
              >
                <span
                  class="t-checkbox__icon-left"
                >
                  <input
                    class="t-checkbox__original-left"
                    name=""
                    type="checkbox"
                    value="1"
                  />
                  <svg
                    class="t-icon t-icon-check-circle-filled"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
                <span
                  class="t-checkbox__label"
                >
                  <span
                    style="display: -webkit-box; overflow: hidden;"
                  >
                    多选
                  </span>
                  <!--v-if-->
                </span>
                <!--v-if-->
              </div>
              <!--下边框 -->
              <div
                class="t-checkbox__border t-checkbox__border--left"
              />
            </div>
            <div
              class="t-checkbox"
            >
              <div
                class="t-checkbox__content-wrap"
              >
                <span
                  class="t-checkbox__icon-left"
                >
                  <input
                    class="t-checkbox__original-left"
                    name=""
                    type="checkbox"
                    value="2"
                  />
                  <svg
                    class="t-icon t-icon-circle"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
                      fill="currentColor"
                      fill-opacity="0.9"
                      opacity="0.9"
                    />
                  </svg>
                </span>
                <span
                  class="t-checkbox__label"
                >
                  <span
                    style="display: -webkit-box; overflow: hidden;"
                  >
                    多选
                  </span>
                  <!--v-if-->
                </span>
                <!--v-if-->
              </div>
              <!--下边框 -->
              <div
                class="t-checkbox__border t-checkbox__border--left"
              />
            </div>
            <div
              class="t-checkbox"
            >
              <div
                class="t-checkbox__content-wrap"
              >
                <span
                  class="t-checkbox__icon-left"
                >
                  <input
                    class="t-checkbox__original-left"
                    name=""
                    type="checkbox"
                    value="3"
                  />
                  <svg
                    class="t-icon t-icon-circle"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
                      fill="currentColor"
                      fill-opacity="0.9"
                      opacity="0.9"
                    />
                  </svg>
                </span>
                <span
                  class="t-checkbox__label"
                >
                  <span
                    style="display: -webkit-box; overflow: hidden;"
                  >
                    多选
                  </span>
                  <!--v-if-->
                </span>
                <!--v-if-->
              </div>
              <!--下边框 -->
              <div
                class="t-checkbox__border t-checkbox__border--left"
              />
            </div>
            
          </span>
        </div>
      </div>
      
    </div>
    <div
      class="tdesign-mobile-demo-block"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        限制最多可选数量
      </p>
      
      <div
        data-v-cd906cdc=""
      >
        <div
          class="t-checkbox-group checkbox-group-demo"
          data-v-cd906cdc=""
        >
          
          <div
            class="t-checkbox t-is-checked"
            data-v-cd906cdc=""
          >
            <div
              class="t-checkbox__content-wrap"
            >
              <span
                class="t-checkbox__icon-left"
              >
                <input
                  class="t-checkbox__original-left"
                  name="checkbox1"
                  type="checkbox"
                  value="1"
                />
                <svg
                  class="t-icon t-icon-check-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
              <span
                class="t-checkbox__label"
              >
                <span
                  style="display: -webkit-box; overflow: hidden;"
                >
                  多选
                </span>
                <!--v-if-->
              </span>
              <!--v-if-->
            </div>
            <!--下边框 -->
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          <div
            class="t-checkbox t-is-checked"
            data-v-cd906cdc=""
          >
            <div
              class="t-checkbox__content-wrap"
            >
              <span
                class="t-checkbox__icon-left"
              >
                <input
                  class="t-checkbox__original-left"
                  name="checkbox1"
                  type="checkbox"
                  value="2"
                />
                <svg
                  class="t-icon t-icon-check-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
              <span
                class="t-checkbox__label"
              >
                <span
                  style="display: -webkit-box; overflow: hidden;"
                >
                  多选
                </span>
                <!--v-if-->
              </span>
              <!--v-if-->
            </div>
            <!--下边框 -->
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          <div
            class="t-checkbox t-is-disabled"
            data-v-cd906cdc=""
          >
            <div
              class="t-checkbox__content-wrap"
            >
              <span
                class="t-checkbox__icon-left"
              >
                <input
                  class="t-checkbox__original-left"
                  disabled=""
                  name="checkbox1"
                  type="checkbox"
                  value="3"
                />
                <svg
                  class="t-icon t-icon-circle"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                    opacity="0.9"
                  />
                </svg>
              </span>
              <span
                class="t-checkbox__label"
              >
                <span
                  style="color: rgb(220, 220, 220); display: -webkit-box; overflow: hidden;"
                >
                  多选
                </span>
                <!--v-if-->
              </span>
              <!--v-if-->
            </div>
            <!--下边框 -->
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          
        </div>
      </div>
      
    </div>
    <div
      class="tdesign-mobile-demo-block"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        多选框禁用态
      </p>
      
      <div
        class="checkbox-demo"
        data-v-3fba2a16=""
      >
        <div
          class="t-checkbox t-is-disabled"
          data-v-3fba2a16=""
        >
          <div
            class="t-checkbox__content-wrap"
          >
            <span
              class="t-checkbox__icon-left"
            >
              <input
                class="t-checkbox__original-left"
                disabled=""
                name=""
                type="checkbox"
              />
              <svg
                class="t-icon t-icon-circle"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
                  fill="currentColor"
                  fill-opacity="0.9"
                  opacity="0.9"
                />
              </svg>
            </span>
            <span
              class="t-checkbox__label"
            >
              <span
                style="color: rgb(220, 220, 220); display: -webkit-box; overflow: hidden;"
              >
                多选
              </span>
              <!--v-if-->
            </span>
            <!--v-if-->
          </div>
          <!--下边框 -->
          <div
            class="t-checkbox__border t-checkbox__border--left"
          />
        </div>
        <div
          class="t-checkbox t-is-checked t-is-disabled"
          data-v-3fba2a16=""
        >
          <div
            class="t-checkbox__content-wrap"
          >
            <span
              class="t-checkbox__icon-left"
            >
              <input
                class="t-checkbox__original-left"
                disabled=""
                name=""
                type="checkbox"
              />
              <svg
                class="t-icon t-icon-check-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
            <span
              class="t-checkbox__label"
            >
              <span
                style="color: rgb(220, 220, 220); display: -webkit-box; overflow: hidden;"
              >
                多选
              </span>
              <!--v-if-->
            </span>
            <!--v-if-->
          </div>
          <!--下边框 -->
          <div
            class="t-checkbox__border t-checkbox__border--left"
          />
        </div>
        <div
          class="t-checkbox t-is-disabled"
          data-v-3fba2a16=""
        >
          <div
            class="t-checkbox__content-wrap"
          >
            <!--v-if-->
            <span
              class="t-checkbox__label t-checkbox__label-left"
            >
              <span
                style="color: rgb(220, 220, 220); display: -webkit-box; overflow: hidden;"
              >
                多选
              </span>
              <!--v-if-->
            </span>
            <span
              class="t-checkbox__icon-right"
            >
              <input
                class="t-checkbox__original-right"
                disabled=""
                name=""
                type="checkbox"
              />
              <svg
                class="t-icon t-icon-circle"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
                  fill="currentColor"
                  fill-opacity="0.9"
                  opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <!--下边框 -->
          <div
            class="t-checkbox__border t-checkbox__border--right"
          />
        </div>
        <div
          class="t-checkbox t-is-checked t-is-disabled"
          data-v-3fba2a16=""
        >
          <div
            class="t-checkbox__content-wrap"
          >
            <!--v-if-->
            <span
              class="t-checkbox__label t-checkbox__label-left"
            >
              <span
                style="color: rgb(220, 220, 220); display: -webkit-box; overflow: hidden;"
              >
                多选
              </span>
              <!--v-if-->
            </span>
            <span
              class="t-checkbox__icon-right"
            >
              <input
                class="t-checkbox__original-right"
                disabled=""
                name=""
                type="checkbox"
              />
              <svg
                class="t-icon t-icon-check-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <!--下边框 -->
          <div
            class="t-checkbox__border t-checkbox__border--right"
          />
        </div>
      </div>
      
    </div>
    <div
      class="tdesign-mobile-demo-block"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        多选框半选态
      </p>
      
      <div
        class="checkbox-demo"
        data-v-72ea89e9=""
      >
        <div
          class="t-checkbox t-is-indeterminate"
          data-v-72ea89e9=""
        >
          <div
            class="t-checkbox__content-wrap"
          >
            <span
              class="t-checkbox__icon-left"
            >
              <input
                class="t-checkbox__original-left"
                name=""
                type="checkbox"
              />
              <svg
                class="t-icon t-icon-minus-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  clip-rule="evenodd"
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zm3.5-6.5h-7v-1h7v1z"
                  fill="currentColor"
                  fill-opacity="0.9"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="t-checkbox__label"
            >
              <span
                style="display: -webkit-box; overflow: hidden;"
              >
                多选
              </span>
              <!--v-if-->
            </span>
            <!--v-if-->
          </div>
          <!--下边框 -->
          <div
            class="t-checkbox__border t-checkbox__border--left"
          />
        </div>
      </div>
      
    </div>
    <div
      class="tdesign-mobile-demo-block"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 特殊类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        自定义图标多选框
      </p>
      
      <div
        data-v-4c12b9bb=""
      >
        <div
          class="t-checkbox-group checkbox-group-demo"
          data-v-4c12b9bb=""
        >
          
          <div
            class="t-checkbox"
            data-v-4c12b9bb=""
          >
            <div
              class="t-checkbox__content-wrap"
            >
              <span
                class="t-checkbox__icon-left"
              >
                <input
                  class="t-checkbox__original-left"
                  name="checkbox6"
                  type="checkbox"
                  value="1"
                />
                <svg
                  class="t-icon t-icon-rectangle"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3 14a1 1 0 01-1-1V3a1 1 0 011-1h10a1 1 0 011 1v10a1 1 0 01-1 1H3zm0-1V3h10v10H3z"
                    fill="currentColor"
                    fill-opacity="0.9"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="t-checkbox__label"
              >
                <span
                  style="display: -webkit-box; overflow: hidden;"
                >
                  多选
                </span>
                <!--v-if-->
              </span>
              <!--v-if-->
            </div>
            <!--下边框 -->
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          <div
            class="t-checkbox t-is-checked"
            data-v-4c12b9bb=""
          >
            <div
              class="t-checkbox__content-wrap"
            >
              <span
                class="t-checkbox__icon-left"
              >
                <input
                  class="t-checkbox__original-left"
                  name="checkbox6"
                  type="checkbox"
                  value="2"
                />
                <svg
                  class="t-icon t-icon-check-rectangle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M2 13a1 1 0 001 1h10a1 1 0 001-1V3a1 1 0 00-1-1H3a1 1 0 00-1 1v10zm5-3.64l3.77-3.78.71.7L7 10.79l-2.49-2.5.71-.7L7 9.36z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
              <span
                class="t-checkbox__label"
              >
                <span
                  style="display: -webkit-box; overflow: hidden;"
                >
                  多选
                </span>
                <!--v-if-->
              </span>
              <!--v-if-->
            </div>
            <!--下边框 -->
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          <div
            class="t-checkbox t-is-checked"
            data-v-4c12b9bb=""
          >
            <div
              class="t-checkbox__content-wrap"
            >
              <span
                class="t-checkbox__icon-left"
              >
                <input
                  class="t-checkbox__original-left"
                  name="checkbox6"
                  type="checkbox"
                  value="3"
                />
                <svg
                  class="t-icon t-icon-check-rectangle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M2 13a1 1 0 001 1h10a1 1 0 001-1V3a1 1 0 00-1-1H3a1 1 0 00-1 1v10zm5-3.64l3.77-3.78.71.7L7 10.79l-2.49-2.5.71-.7L7 9.36z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
              <span
                class="t-checkbox__label"
              >
                <span
                  style="display: -webkit-box; overflow: hidden;"
                >
                  多选
                </span>
                <!--v-if-->
              </span>
              <!--v-if-->
            </div>
            <!--下边框 -->
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          
        </div>
      </div>
      
    </div>
    <div
      class="tdesign-mobile-demo-block"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        04 规格
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        多选框尺寸规格
      </p>
      
      <div
        data-v-aaeb4d7a=""
      >
        <div
          class="t-checkbox t-is-checked checkbox-demo checkbox-demo--size-small space"
          data-v-aaeb4d7a=""
        >
          <div
            class="t-checkbox__content-wrap"
          >
            <span
              class="t-checkbox__icon-left"
            >
              <input
                class="t-checkbox__original-left"
                name="checkbox7"
                type="checkbox"
                value="1"
              />
              <svg
                class="t-icon t-icon-check-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
            <span
              class="t-checkbox__label"
            >
              <span
                style="display: -webkit-box; overflow: hidden;"
              >
                多选
              </span>
              <!--v-if-->
            </span>
            <!--v-if-->
          </div>
          <!--下边框 -->
          <div
            class="t-checkbox__border t-checkbox__border--left"
          />
        </div>
        <div
          class="t-checkbox t-is-checked checkbox-demo"
          data-v-aaeb4d7a=""
        >
          <div
            class="t-checkbox__content-wrap"
          >
            <span
              class="t-checkbox__icon-left"
            >
              <input
                class="t-checkbox__original-left"
                name="checkbox7"
                type="checkbox"
                value="2"
              />
              <svg
                class="t-icon t-icon-check-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
            <span
              class="t-checkbox__label"
            >
              <span
                style="display: -webkit-box; overflow: hidden;"
              >
                多选
              </span>
              <!--v-if-->
            </span>
            <!--v-if-->
          </div>
          <!--下边框 -->
          <div
            class="t-checkbox__border t-checkbox__border--left"
          />
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Checkbox > Checkbox rightVue demo works fine 1`] = `
<div
  data-v-2e3e3cca=""
>
  <div
    class="t-checkbox-group checkbox-group-demo"
    data-v-2e3e3cca=""
  >
    
    <div
      class="t-checkbox"
      data-v-2e3e3cca=""
    >
      <div
        class="t-checkbox__content-wrap"
      >
        <!--v-if-->
        <span
          class="t-checkbox__label t-checkbox__label-left"
        >
          <span
            style="display: -webkit-box; overflow: hidden;"
          >
            多选
          </span>
          <!--v-if-->
        </span>
        <span
          class="t-checkbox__icon-right"
        >
          <input
            class="t-checkbox__original-right"
            name="checkbox2"
            type="checkbox"
            value="1"
          />
          <svg
            class="t-icon t-icon-circle"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
              fill="currentColor"
              fill-opacity="0.9"
              opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <!--下边框 -->
      <div
        class="t-checkbox__border t-checkbox__border--right"
      />
    </div>
    <div
      class="t-checkbox t-is-checked"
      data-v-2e3e3cca=""
    >
      <div
        class="t-checkbox__content-wrap"
      >
        <!--v-if-->
        <span
          class="t-checkbox__label t-checkbox__label-left"
        >
          <span
            style="display: -webkit-box; overflow: hidden;"
          >
            多选
          </span>
          <!--v-if-->
        </span>
        <span
          class="t-checkbox__icon-right"
        >
          <input
            class="t-checkbox__original-right"
            name="checkbox2"
            type="checkbox"
            value="2"
          />
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <!--下边框 -->
      <div
        class="t-checkbox__border t-checkbox__border--right"
      />
    </div>
    <div
      class="t-checkbox t-is-checked"
      data-v-2e3e3cca=""
    >
      <div
        class="t-checkbox__content-wrap"
      >
        <!--v-if-->
        <span
          class="t-checkbox__label t-checkbox__label-left"
        >
          <span
            style="display: -webkit-box; overflow: hidden;"
          >
            多选
          </span>
          <!--v-if-->
        </span>
        <span
          class="t-checkbox__icon-right"
        >
          <input
            class="t-checkbox__original-right"
            name="checkbox2"
            type="checkbox"
            value="3"
          />
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <!--下边框 -->
      <div
        class="t-checkbox__border t-checkbox__border--right"
      />
    </div>
    <div
      class="t-checkbox"
      data-v-2e3e3cca=""
    >
      <div
        class="t-checkbox__content-wrap"
      >
        <!--v-if-->
        <span
          class="t-checkbox__label t-checkbox__label-left"
        >
          <span
            style="display: -webkit-box; overflow: hidden;"
          >
            多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多选多
          </span>
          <!--v-if-->
        </span>
        <span
          class="t-checkbox__icon-right"
        >
          <input
            class="t-checkbox__original-right"
            name="checkbox2"
            type="checkbox"
            value="4"
          />
          <svg
            class="t-icon t-icon-circle"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2z"
              fill="currentColor"
              fill-opacity="0.9"
              opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <!--下边框 -->
      <div
        class="t-checkbox__border t-checkbox__border--right"
      />
    </div>
    
  </div>
</div>
`;

exports[`Checkbox > Checkbox sizeVue demo works fine 1`] = `
<div
  data-v-aaeb4d7a=""
>
  <div
    class="t-checkbox t-is-checked checkbox-demo checkbox-demo--size-small space"
    data-v-aaeb4d7a=""
  >
    <div
      class="t-checkbox__content-wrap"
    >
      <span
        class="t-checkbox__icon-left"
      >
        <input
          class="t-checkbox__original-left"
          name="checkbox7"
          type="checkbox"
          value="1"
        />
        <svg
          class="t-icon t-icon-check-circle-filled"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-checkbox__label"
      >
        <span
          style="display: -webkit-box; overflow: hidden;"
        >
          多选
        </span>
        <!--v-if-->
      </span>
      <!--v-if-->
    </div>
    <!--下边框 -->
    <div
      class="t-checkbox__border t-checkbox__border--left"
    />
  </div>
  <div
    class="t-checkbox t-is-checked checkbox-demo"
    data-v-aaeb4d7a=""
  >
    <div
      class="t-checkbox__content-wrap"
    >
      <span
        class="t-checkbox__icon-left"
      >
        <input
          class="t-checkbox__original-left"
          name="checkbox7"
          type="checkbox"
          value="2"
        />
        <svg
          class="t-icon t-icon-check-circle-filled"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-checkbox__label"
      >
        <span
          style="display: -webkit-box; overflow: hidden;"
        >
          多选
        </span>
        <!--v-if-->
      </span>
      <!--v-if-->
    </div>
    <!--下边框 -->
    <div
      class="t-checkbox__border t-checkbox__border--left"
    />
  </div>
</div>
`;
